[gd_scene load_steps=8 format=3 uid="uid://n8jop40jk4tx"]

[ext_resource type="Texture2D" uid="uid://ceaj2xytttlh" path="res://media/imagenes/main_menu.png" id="1_ekxnf"]
[ext_resource type="Script" uid="uid://d3d4tr11egx5h" path="res://scripts/main_menu.gd" id="1_wu84c"]
[ext_resource type="Texture2D" uid="uid://bc02rtx67qijm" path="res://media/imagenes/game_title.png" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://c3y1owof88k4m" path="res://fonts/Good-Game.ttf" id="3_bqqt6"]
[ext_resource type="AudioStream" uid="uid://btbqovhibck81" path="res://media/sonidos/sonido_botones.wav" id="5_8ln24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 0.5686275, 0.3019608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.1882353)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 0.5686275, 0.3019608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.1882353)
shadow_size = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu84c")

[node name="TextureRectFondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ekxnf")

[node name="TextureRectTitulo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -337.0
offset_right = 368.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_bqqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = 70.0
offset_right = 181.0
offset_bottom = 329.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="ButtonJugar" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "JUGAR"

[node name="ButtonSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "SALIR"

[node name="sonidoBotones" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("5_8ln24")

[connection signal="pressed" from="VBoxContainer/ButtonJugar" to="." method="_on_button_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSalir" to="." method="_on_button_salir_pressed"]
